--- a/clientes.html
+++ b/clientes.html
@@ -32,7 +32,7 @@
     </div>
     <div class="container">
 
-      <form action="javascript: salvarCliente();" class="row g-3" id="cadastroClientes">
+      <form action="" class="row g-3" id="cadastroClientes" method="get">
         <div class="col-md-6">
           <label for="cpfCnpj" class="form-label">CPF - CNPJ</label>
           <input type="text" class="form-control shadow text-uppercase" id="cpfCnpj" placeholder="Somente Números">
@@ -86,12 +86,13 @@
           <textarea class="form-control shadow text-uppercase" id="observacao" rows="2"></textarea>
         </div>
         <div class="col-12" style="text-align: right;">
-          <button type="submit" class="btn btn-primary shadow">Salvar</button>
+          <input type="submit" class="btn btn-primary shadow" value="Salvar">
+          
         </div>
       </form>
     </div>
-  </div>    
-
+  </div>     
+  
     <!--scripts-->
     <script src="/js/scripts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
