removido mothod do form

--- a/clientes.html
+++ b/clientes.html
@@ -32,7 +32,7 @@
     </div>
     <div class="container">
 
-      <form action="" class="row g-3" id="cadastroClientes" method="get">
+      <form action="" class="row g-3" id="cadastroClientes" method="">
         <div class="col-md-6">
           <label for="cpfCnpj" class="form-label">CPF - CNPJ</label>
           <input type="text" class="form-control shadow text-uppercase" id="cpfCnpj" placeholder="Somente Números">
